--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    margin-top: -5rem;
+    margin-top: 3rem;
     margin-bottom: 6rem;
   }
   .counter-plus {
@@ -142,11 +142,16 @@ h1 {
     margin-bottom: -4rem;
   }
   .counter-minus {
-    margin-bottom: 1rem;
+    margin-bottom: 14rem;
   }
   .btn {
     font-size: 2.8rem;
     padding: 2.8rem 3.8rem;
+  }
+  .number {
+    font-size: 4rem;
+    width: 12rem;
+    padding: 2rem 0rem;
   }
 }
 @media (max-width: 26em) {
